# recast_navigation

./: .gitignore  Cargo.toml  README.md  build.rs
lib/: AiNav.exp  AiNav.lib
recast_src/: AiCrowd.cpp  AiCrowd.hpp  AiNav.cpp  AiNav.h  AiQuery.cpp  AiQuery.hpp  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Navigation.hpp  NavigationBuilder.cpp  NavigationBuilder.hpp  NavigationMesh.cpp  NavigationMesh.hpp  dllmain.cpp
src/: bindings.rs  lib.rs
src/building/: mod.rs  navmesh_build_utils.rs  navmesh_builder.rs  shape_to_mesh.rs  tile_input_builder.rs
src/common/: mod.rs  navmesh.rs  navmesh_tile.rs
src/crowd/: crowd.rs  mod.rs
src/queries/: mod.rs  nav_query.rs
